<resources>
    <string name="app_name">GreenMode</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user_name">user name</string>
    <string name="display_name"></string>
    <string name="or_login_with">OR login with</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="facebook">facebook</string>
    <string name="title_activity_maps">Map</string>
    <string name="question_text">Question 1</string>
    <string name="question2_text">Question 2</string>
    <string name="question3_text">Question 3</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="answer1_second">Answer 1</string>
    <string name="answer2_second">Answer 2</string>
    <string name="answer3_second">Answer 3</string>
    <string name="answer4_second">Answer 4</string>
    <string name="answer1_third">Answer 1</string>
    <string name="answer2_third">Answer 2</string>
    <string name="answer3_third">Answer 3</string>
    <string name="answer4_third">Answer 4</string>
    <string name="getresults">GET RESULTS</string>
    <string name="tips">I beef up my plant-based diet
If we reduced global meat consumption by 50% and used more calories from plants, we would move Overshoot Day 5 days!

I jump in front of the camera
Do not turism animal, do not take picture of animals that are working when you are on holidays.

I travel with an eco-sensibility - Let’s explore, not exploit! When we bring an eco-attitude to the places we visit, and take action to limit the impacts of our trip, our vacation can provide important benefits to local communities while supporting conservation.

I start a population conversation

I take on food waste
The amount of wasted food is equivalent to about 9% of the global Ecological Footprint
</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_second_question">SecondQuestion</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_news">News</string>
</resources>
