<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48BC60"
    tools:context=".SecondQuestion">

    <CheckBox
        android:id="@+id/answer1_second"
        android:layout_width="395dp"
        android:layout_height="44dp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/answer1_second"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/answer2_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2"
        tools:text="@string/answer1_second" />

    <CheckBox
        android:id="@+id/answer2_second"
        android:layout_width="395dp"
        android:layout_height="44dp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/answer3_second"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/answer3_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1_second"
        tools:text="@string/answer2_second" />

    <CheckBox
        android:id="@+id/answer3_second"
        android:layout_width="395dp"
        android:layout_height="44dp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/answer3_second"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/answer4_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer2_second"
        tools:text="@string/answer3_second" />

    <CheckBox
        android:id="@+id/answer4_second"
        android:layout_width="395dp"
        android:layout_height="44dp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/answer4_second"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer3_second"
        tools:text="@string/answer4_second" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="395dp"
        android:layout_height="63dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:gravity="start|center_vertical"
        android:text="@string/question2_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/answer1_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/question2_text" />

    <ImageButton
        android:id="@+id/next_btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:onClick="nextActivityQ3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer4_second"
        app:srcCompat="@drawable/next" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="580dp" />


</androidx.constraintlayout.widget.ConstraintLayout>