<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48BC60"
    tools:context=".FirstQuestion">

    <CheckBox
        android:id="@+id/answer1_first"
        android:layout_width="395dp"
        android:layout_height="44dp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="start"
        android:text="@string/answer1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/answer2_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question1"
        tools:text="@string/answer1"
        android:layout_marginEnd="20sp" />

    <CheckBox
        android:id="@+id/answer2_first"
        android:layout_width="395dp"
        android:layout_height="44dp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="start"
        android:text="@string/answer2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/answer3_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1_first"
        tools:text="@string/answer2" />

    <CheckBox
        android:id="@+id/answer3_first"
        android:layout_width="395dp"
        android:layout_height="44dp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="start"
        android:text="@string/answer3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/answer4_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer2_first"
        tools:text="@string/answer3" />

    <CheckBox
        android:id="@+id/answer4_first"
        android:layout_width="395dp"
        android:layout_height="44dp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="start"
        android:text="@string/answer4"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer3_first"
        tools:text="@string/answer4" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="395dp"
        android:layout_height="63dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:gravity="start|center_vertical"
        android:text="@string/question_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/answer1_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/question_text" />

    <ImageButton
        android:id="@+id/next_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="TODO"
        android:onClick="nextActivityQ2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer4_first"
        app:srcCompat="@drawable/next" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="580dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>